--- a/app/src/main/res/layout/landingpage.xml
+++ b/app/src/main/res/layout/landingpage.xml
@@ -24,6 +24,7 @@
         android:background="#ffffff"
         android:text="daftar"
         android:textColor="#46B3E6"
+        app:fontFamily="@font/poppins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:background="#46B3E6"
         android:text="masuk"
         android:textColor="#ffffff"
+        app:fontFamily="@font/poppins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +53,7 @@
         android:layout_marginTop="32dp"
         android:text="Aplikasi pariwisata Kota Malang"
         android:textColor="#000000"
+        app:fontFamily="@font/poppins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +67,7 @@
         android:text="Atasiwirapp"
         android:textColor="#0F88C5"
         android:textSize="40dp"
-        app:fontFamily="sans-serif-medium"
+        app:fontFamily="@font/poppins_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_lp" />
