--- a/app/src/main/res/layout/activity_menu_wisata.xml
+++ b/app/src/main/res/layout/activity_menu_wisata.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
-    tools:context=".menuWisata">
+    tools:context=".MenuWisata">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvWisataTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -27,16 +27,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
+            android:id="@+id/rvWisata"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textView6"
+            android:layout_below="@id/tvWisataTitle"
+            android:layout_alignStart="@+id/tvWisataTitle"
+            android:layout_alignEnd="@+id/tvWisataTitle"
+            android:layout_marginStart="-74dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="42dp"
+            android:layout_marginEnd="-74dp"
             android:layout_marginRight="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/tvWisataTitle" />
     </RelativeLayout>
 
 </androidx.core.widget.NestedScrollView>
