--- a/app/src/main/res/layout/activity_wisata.xml
+++ b/app/src/main/res/layout/activity_wisata.xml
@@ -46,7 +46,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_semibold"
-            android:text="Gunung Bromo"
+            android:text="Title"
             android:textColor="#000"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="@+id/imgWisataPic"
@@ -72,7 +72,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/poppins"
-            android:text="Gunung Bromo adalah sebuah gunung berapi aktif yang  terkenal sebagai objek wisata utama di Jawa Timur."
+            android:text="Desc"
             android:textColor="#000"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/imgWisataPic"
@@ -86,7 +86,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_semibold"
-            android:text="4.7"
+            android:text="Rating"
             android:textColor="#EFBE05"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/imgWisataStar"
