--- a/app/src/main/res/layout/activity_menu_wisata.xml
+++ b/app/src/main/res/layout/activity_menu_wisata.xml
@@ -27,20 +27,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvWisata"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
+            android:id="@+id/rvWisata"
+            android:layout_centerHorizontal="true"
             android:layout_below="@id/tvWisataTitle"
-            android:layout_alignStart="@+id/tvWisataTitle"
-            android:layout_alignEnd="@+id/tvWisataTitle"
-            android:layout_marginStart="-74dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="42dp"
-            android:layout_marginEnd="-74dp"
-            android:layout_marginRight="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvWisataTitle" />
+            android:layout_marginTop="42dp"/>
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rvWisata"-->
+<!--            android:layout_width="330dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/tvWisataTitle"-->
+<!--            android:layout_alignStart="@+id/tvWisataTitle"-->
+<!--            android:layout_alignEnd="@+id/tvWisataTitle"-->
+<!--            android:layout_marginStart="-84dp"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:layout_marginTop="42dp"-->
+<!--            android:layout_marginEnd="-84dp"-->
+<!--            android:layout_marginRight="30dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/tvWisataTitle" />-->
     </RelativeLayout>
 
 </androidx.core.widget.NestedScrollView>
