--- a/app/src/main/res/layout/activity_wisata.xml
+++ b/app/src/main/res/layout/activity_wisata.xml
@@ -106,12 +106,12 @@
             android:layout_width="418dp"
             android:layout_height="251dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.571"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bromo" />
+            app:srcCompat="@drawable/ic_launcher_background" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvReview"
