fixing layout and add change password//email

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".Login">
 
 <TextView
@@ -34,12 +35,15 @@
     <EditText
         android:id="@+id/txtLoginEmail"
         android:layout_width="248dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_input"
         android:ems="10"
+        android:fontFamily="@font/poppins"
         android:inputType="textEmailAddress"
-        android:padding="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +53,15 @@
     <EditText
         android:id="@+id/txtLoginPassword"
         android:layout_width="248dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_input"
         android:ems="10"
+        android:fontFamily="@font/poppins"
         android:inputType="textPassword"
-        android:padding="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +72,7 @@
         android:id="@+id/tvLoginPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Kata sandi"
         android:textColor="#000000"
         app:fontFamily="@font/poppins"
@@ -76,7 +83,7 @@
         android:id="@+id/txtLoginForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:text="Lupa kata sandi?"
         android:textColor="#000000"
         android:textSize="12sp"
@@ -87,8 +94,8 @@
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="248dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="31dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/bg_btn_blue"
         android:fontFamily="@font/poppins_semibold"
         android:text="Masuk"
