--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".AddReview">
 
     <TextView
@@ -25,6 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:foregroundTint="#C4C4C4"
+        android:indeterminateTint="#C4C4C4"
+        android:progressBackgroundTint="#C4C4C4"
         android:progressTint="#FFCB05"
         android:secondaryProgressTint="@android:color/transparent"
         android:stepSize="0.5"
@@ -32,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddReviewDesc" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAddReviewDesc"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvAddReviewWisataName"
@@ -69,16 +74,16 @@
     <EditText
         android:id="@+id/txtAddReviewDesc"
         android:layout_width="330dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/bg_input"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:gravity="top"
         android:hint="Tuliskan alasan anda"
         android:inputType="textMultiLine"
-        android:padding="8dp"
-        android:textSize="12sp"
+        android:padding="12dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmitReview"
         app:layout_constraintEnd_toEndOf="@+id/txtAddReviewName"
         app:layout_constraintHorizontal_bias="0.5"
@@ -88,8 +93,8 @@
     <Button
         android:id="@+id/btnSubmitReview"
         android:layout_width="330dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/bg_btn_blue"
         android:fontFamily="@font/poppins_semibold"
         android:text="Kirim"
@@ -99,21 +104,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtAddReviewDesc"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/txtAddReviewDesc"
-        app:layout_constraintTop_toBottomOf="@+id/txtAddReviewDesc" />
+        app:layout_constraintStart_toStartOf="@+id/txtAddReviewDesc" />
 
     <EditText
         android:id="@+id/txtAddReviewName"
         android:layout_width="330dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/bg_input"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="Tuliskan nama anda"
         android:inputType="textPersonName"
-        android:padding="8dp"
-        android:textSize="12sp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/txtAddReviewDesc"
         app:layout_constraintEnd_toEndOf="@+id/rbAddReviewRating"
         app:layout_constraintHorizontal_bias="0.5"
