--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".EditProfile">
 
-  <EditText
-      android:id="@+id/txtEditProfileName"
+  <Button
+      android:id="@+id/btnChangeEmail"
       android:layout_width="330dp"
-      android:layout_height="40dp"
-      android:layout_marginTop="3dp"
-      android:background="@drawable/bg_input"
-      android:ems="10"
-      android:fontFamily="@font/poppins"
-      android:inputType="textPersonName"
-      android:padding="8dp"
-      android:textSize="12sp"
-      app:layout_constraintEnd_toEndOf="@+id/cardView"
-      app:layout_constraintHorizontal_bias="0.502"
-      app:layout_constraintStart_toStartOf="@+id/cardView"
-      app:layout_constraintTop_toBottomOf="@+id/textView2" />
+      android:layout_height="48dp"
+      android:layout_marginTop="16dp"
+      android:background="@drawable/bg_btn_white"
+      android:text="Ganti Email"
+      android:textAllCaps="false"
+      android:textColor="#46B3E6"
+      app:fontFamily="@font/poppins"
+      app:layout_constraintEnd_toEndOf="@+id/txtEditProfileName"
+      app:layout_constraintStart_toStartOf="@+id/txtEditProfileName"
+      app:layout_constraintTop_toBottomOf="@+id/txtEditProfileName"
+      tools:ignore="TextContrastCheck" />
+
+  <Button
+      android:id="@+id/btnChangePassword"
+      android:layout_width="330dp"
+      android:layout_height="48dp"
+      android:layout_marginTop="16dp"
+      android:background="@drawable/bg_btn_white"
+      android:text="Ganti Kata Sandi"
+      android:textAllCaps="false"
+      android:textColor="#46B3E6"
+      app:fontFamily="@font/poppins"
+      app:layout_constraintEnd_toEndOf="@+id/btnChangeEmail"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/btnChangeEmail"
+      app:layout_constraintTop_toBottomOf="@+id/btnChangeEmail"
+      tools:ignore="TextContrastCheck" />
 
   <TextView
       android:id="@+id/tvEditProfileTitle"
@@ -37,8 +52,40 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
+  <Button
+      android:id="@+id/btnEditProfileSubmit"
+      android:layout_width="330dp"
+      android:layout_height="48dp"
+      android:layout_marginBottom="30dp"
+      android:background="@drawable/bg_btn_blue"
+      android:fontFamily="@font/poppins_semibold"
+      android:text="Simpan"
+      android:textAllCaps="false"
+      android:textColor="#FFF"
+      android:textSize="16sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/btnChangePassword"
+      app:layout_constraintStart_toStartOf="@+id/btnChangePassword" />
+
+  <EditText
+      android:id="@+id/txtEditProfileName"
+      android:layout_width="330dp"
+      android:layout_height="48dp"
+      android:layout_marginTop="3dp"
+      android:background="@drawable/bg_input"
+      android:ems="10"
+      android:fontFamily="@font/poppins"
+      android:inputType="textPersonName"
+      android:paddingLeft="12dp"
+      android:paddingRight="12dp"
+      android:textSize="14sp"
+      app:layout_constraintEnd_toEndOf="@+id/cardView"
+      app:layout_constraintHorizontal_bias="0.502"
+      app:layout_constraintStart_toStartOf="@+id/cardView"
+      app:layout_constraintTop_toBottomOf="@+id/tvEditProfileName" />
+
   <ImageButton
-      android:id="@+id/imageButton"
+      android:id="@+id/btnEditProfilePic"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="-30dp"
@@ -48,11 +95,22 @@
       app:layout_constraintStart_toEndOf="@+id/cardView"
       app:srcCompat="@drawable/btn_edit_profile_pic" />
 
+  <TextView
+      android:id="@+id/tvEditProfileName"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="50dp"
+      android:fontFamily="@font/poppins"
+      android:text="Nama Lengkap"
+      android:textColor="#000"
+      app:layout_constraintStart_toStartOf="@+id/txtEditProfileName"
+      app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
   <androidx.cardview.widget.CardView
       android:id="@+id/cardView"
       android:layout_width="125dp"
       android:layout_height="125dp"
-      android:layout_marginTop="30dp"
+      android:layout_marginTop="60dp"
       app:cardBackgroundColor="@color/white"
       app:cardCornerRadius="250dp"
       app:layout_constraintEnd_toEndOf="@+id/tvEditProfileTitle"
@@ -75,16 +133,5 @@
     </androidx.cardview.widget.CardView>
 
   </androidx.cardview.widget.CardView>
-
-  <TextView
-      android:id="@+id/textView2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="60dp"
-      android:fontFamily="@font/poppins"
-      android:text="Nama Lengkap"
-      android:textColor="#000"
-      app:layout_constraintStart_toStartOf="@+id/txtEditProfileName"
-      app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
