--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".Register">
 
     <TextView
@@ -55,11 +56,14 @@
     <EditText
         android:id="@+id/txtRegisterEmail"
         android:layout_width="248dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_input"
         android:ems="10"
-        android:padding="8dp"
+        android:fontFamily="@font/poppins"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tvRegisterPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,12 +74,15 @@
     <EditText
         android:id="@+id/txtRegisterPassword"
         android:layout_width="248dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_input"
         android:ems="10"
+        android:fontFamily="@font/poppins"
         android:inputType="textPassword"
-        android:padding="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tvRegisterConfirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -86,12 +93,15 @@
     <EditText
         android:id="@+id/txtRegisterConfirmPassword"
         android:layout_width="248dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/bg_input"
         android:ems="10"
+        android:fontFamily="@font/poppins"
         android:inputType="textPassword"
-        android:padding="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -103,7 +113,7 @@
         android:id="@+id/tvRegisterEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="89dp"
+        android:layout_marginTop="90dp"
         android:text="Email"
         android:textColor="#000000"
         app:fontFamily="@font/poppins"
@@ -115,7 +125,7 @@
         android:id="@+id/tvRegisterPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Kata Sandi"
         android:textColor="#000000"
         app:fontFamily="@font/poppins"
@@ -127,7 +137,7 @@
         android:id="@+id/tvRegisterConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Konfirmasi Kata Sandi"
         android:textColor="#000000"
         app:fontFamily="@font/poppins"
@@ -138,8 +148,8 @@
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="248dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="47dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/bg_btn_blue"
         android:fontFamily="@font/poppins_semibold"
         android:text="Daftar"
