--- a/app/src/main/res/layout/coming_soon_page.xml
+++ b/app/src/main/res/layout/coming_soon_page.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFF">
 
     <TextView
         android:id="@+id/tvComingSoon2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="Fitur sedang dibuat"
         android:textColor="#46B3E6"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:fontFamily="@font/poppins"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvComingSoon"
